// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onSubmit when all data is provided 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <select
      onBlur={[Function]}
      onChange={[Function]}
      value="Activity"
    >
      <option
        value="Activity"
      >
        Activity
      </option>
      <option
        value="Rest"
      >
        Rest
      </option>
    </select>
    <input
      disabled={false}
      onChange={[Function]}
      placeholder="Step name"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Duration (seconds)"
      step="1"
      type="number"
      value={0}
    />
    <button
      onClick={[Function]}
    >
      Add Step
    </button>
  </form>
</div>
`;

exports[`should call onSubmit when all data is provided 2`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <select
      onBlur={[Function]}
      onChange={[Function]}
      value="Activity"
    >
      <option
        value="Activity"
      >
        Activity
      </option>
      <option
        value="Rest"
      >
        Rest
      </option>
    </select>
    <input
      disabled={false}
      onChange={[Function]}
      placeholder="Step name"
      type="text"
      value="Pull-ups"
    />
    <input
      onChange={[Function]}
      placeholder="Duration (seconds)"
      step="1"
      type="number"
      value={0}
    />
    <button
      onClick={[Function]}
    >
      Add Step
    </button>
  </form>
</div>
`;

exports[`should call onSubmit when all data is provided 3`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <select
      onBlur={[Function]}
      onChange={[Function]}
      value="Activity"
    >
      <option
        value="Activity"
      >
        Activity
      </option>
      <option
        value="Rest"
      >
        Rest
      </option>
    </select>
    <input
      disabled={false}
      onChange={[Function]}
      placeholder="Step name"
      type="text"
      value="Pull-ups"
    />
    <input
      onChange={[Function]}
      placeholder="Duration (seconds)"
      step="1"
      type="number"
      value={20}
    />
    <button
      onClick={[Function]}
    >
      Add Step
    </button>
  </form>
</div>
`;

exports[`should call onSubmit when all data is provided 4`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <select
      onBlur={[Function]}
      onChange={[Function]}
      value="Activity"
    >
      <option
        value="Activity"
      >
        Activity
      </option>
      <option
        value="Rest"
      >
        Rest
      </option>
    </select>
    <input
      disabled={false}
      onChange={[Function]}
      placeholder="Step name"
      type="text"
      value="Pull-ups"
    />
    <input
      onChange={[Function]}
      placeholder="Duration (seconds)"
      step="1"
      type="number"
      value={20}
    />
    <button
      onClick={[Function]}
    >
      Add Step
    </button>
  </form>
</div>
`;

exports[`should disable the input for step name when step type is set to Rest 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <select
      onBlur={[Function]}
      onChange={[Function]}
      value="Rest"
    >
      <option
        value="Activity"
      >
        Activity
      </option>
      <option
        value="Rest"
      >
        Rest
      </option>
    </select>
    <input
      disabled={true}
      onChange={[Function]}
      placeholder="Step name"
      type="text"
      value="Rest"
    />
    <input
      onChange={[Function]}
      placeholder="Duration (seconds)"
      step="1"
      type="number"
      value={0}
    />
    <button
      onClick={[Function]}
    >
      Add Step
    </button>
  </form>
</div>
`;

exports[`should render StepForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <select
      onBlur={[Function]}
      onChange={[Function]}
      value="Activity"
    >
      <option
        value="Activity"
      >
        Activity
      </option>
      <option
        value="Rest"
      >
        Rest
      </option>
    </select>
    <input
      disabled={false}
      onChange={[Function]}
      placeholder="Step name"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Duration (seconds)"
      step="1"
      type="number"
      value={0}
    />
    <button
      onClick={[Function]}
    >
      Add Step
    </button>
  </form>
</div>
`;

exports[`should throw error when adding step with no data 1`] = `
<div>
  <p>
    Please fill in all fields
  </p>
  <form
    onSubmit={[Function]}
  >
    <select
      onBlur={[Function]}
      onChange={[Function]}
      value="Activity"
    >
      <option
        value="Activity"
      >
        Activity
      </option>
      <option
        value="Rest"
      >
        Rest
      </option>
    </select>
    <input
      disabled={false}
      onChange={[Function]}
      placeholder="Step name"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Duration (seconds)"
      step="1"
      type="number"
      value={0}
    />
    <button
      onClick={[Function]}
    >
      Add Step
    </button>
  </form>
</div>
`;
